FreedomSanboxAntDeploy/src/objects/Fund__c.object
<CustomObject>
    <fields>
        <fullName>AMCName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AMCName</label>
        <referenceTo>AMC_Name__c</referenceTo>
        <relationshipLabel>Funds</relationshipLabel>
        <relationshipName>Funds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AMC_Name__c</fullName>
        <label>AMC Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAV_Date__c</fullName>
        <label>NAV Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NAV__c</fullName>
        <label>NAV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scheme_Name__c</fullName>
        <externalId>true</externalId>
        <label>Scheme Name</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Fund</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Fund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funds</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>